basic editor hierarchy fix /wp new editor caching fix particle shorthand for fade changed /wp behaviour